[package]
name = "arp-presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
libc = "0.2.120"
pnet = {version = "0.29.0", features = ["pcap"]}
clap = {version = "3.1.6", features = ["derive"]}
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"]}
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tera = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.1.1"
